language/move-lang/tests/move_check/naming/named_address_distinct_from_value.exp
error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_value.move:13:9
   │
13 │     use 0x42::M;
   │         ^^^^^^^ Invalid 'use'. Unbound module: '0x42::M'

error[E02011]: invalid 'friend' declaration
   ┌─ tests/move_check/naming/named_address_distinct_from_value.move:14:5
   │
14 │     friend 0x42::M;
   │     ^^^^^^^^^^^^^^^
   │     │      │
   │     │      Cannot declare modules out of the current address as a friend
   │     Invalid friend declaration

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_value.move:15:22
   │
15 │     public fun ex(): 0x42::M::S {
   │                      ^^^^^^^ Unbound module '0x42::M'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_value.move:16:9
   │
16 │         0x42::M::C;
   │         ^^^^^^^ Unbound module '0x42::M'

error[E03002]: unbound module
   ┌─ tests/move_check/naming/named_address_distinct_from_value.move:17:9
   │
17 │         0x42::M::s()
   │         ^^^^^^^ Unbound module '0x42::M'

