language/move-lang/tests/move_check/naming/named_address_distinct_from_value.move
// These checks straddle a few different passes but
// Named addresses are distinct from their value

address A = 0x42;

module A::M {
    const C: u64 = 0;
    struct S {}
    public fun s(): S { S{} }
}

module A::Ex {
    use 0x42::M;
    friend 0x42::M;
    public fun ex(): 0x42::M::S {
        0x42::M::C;
        0x42::M::s()
    }
}
